Css fix z-index actionbutton in filter

--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -205,6 +205,8 @@
     .container__skyline-alert--confirmation {
         margin: 3em auto 0;
         max-width: map-get($container-max-widths, md);
+        position: relative;
+        z-index: 0;
     }
 }
 
